25.6
-----


25.6
-----
* [*] [internal] Update Gravatar SDK to 3.0.0 [#23701]
* [*] Use the Gravatar Quick Editor to update the avatar [#23729]
* [*] (Hidden under a feature flag) User Management for self-hosted sites. [#23768]
* [*] Enable quick access to notifications from Reader on iPad [#23882]
* [*] Add support for restricted posts in Reader [#23853]

25.5
-----
* [***] Use web-based sign-in flow (hidden under a feature flag) [#23675]
* [*] Enable navigating to an individual post's stats from within the "view more" screen for author stats. [#23761]
* [*] [Jetpack-only] Enable pubishing to non-Jetpack sites when sharing content to the Jetpack app. [#23778]

25.4
-----


25.3
-----


25.2
-----

* [*] [Jetpack-only] Stats: Made optimizations to enhance scrolling performance. [#22847]
* [*] Simplify post list context menu sections [#23356]
* [*] Fix an issue with incorrect snackbar shown when saving drafts manually [#23358]
* [**] Support editing media metadata for sites not powered by Jetpack and reliant on XML-RPC [#23316]
* [*] Fix rare crash in the unsupported block editor [#23379]
* [**] Block editor: Fixed an issue preventing some users from editing or creating content [https://github.com/wordpress-mobile/gutenberg-mobile/pull/6967]
* [*] Block editor: Added partial prefix support for creating Headings, List, and Quote blocks [https://github.com/WordPress/gutenberg/pull/62576]

25.1
-----
* [*] [internal] Block editor: Add onContentUpdate bridge functionality [#23234]
* [*] Fix a rare crash when trashing posts [#23321]
* [*] Fix an issue with a missing navigation bar background in Post Settings [#23334]
* [*] Fix an issue where the app will sometimes save empty drafts [#23342]
* [*] Add `.networkConnectionLost` to the list of "offline" scenarios so that the "offline changes" badge and fast retries work for this use case [#23348]
* [*] If draft sync fails, the app will now show the "Retry" button in the context menu along with the error message [#23355]