@@ -9,6 +9,8 @@
 * [*] (Hidden under a feature flag) User Management for self-hosted sites. [#23768]
 * [*] Enable quick access to notifications from Reader on iPad [#23882]
 * [*] Add support for restricted posts in Reader [#23853]
+* [*] Fix minor appearance issues in the Blaze campaign list [#23891]
+* [*] Improve the sidebar animations and layout on some iPad models [#23886]
 
 25.5
 -----
